--- a/RestX.Admin/RestX.Admin.csproj
+++ b/RestX.Admin/RestX.Admin.csproj
@@ -9,8 +9,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.22">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.22" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RestX.DAL\RestX.DAL.csproj" />
+    <ProjectReference Include="..\RestX.Models\RestX.Models.csproj" />
+    <ProjectReference Include="..\RestX.Services\RestX.BLL.csproj" />
+    <ProjectReference Include="..\RESTX\RESTX.csproj" />
   </ItemGroup>
 
 </Project>
