#RX-29: add some baseRepo, DI, Service, done TenantsController

--- a/RestX.Admin/appsettings.json
+++ b/RestX.Admin/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RestXAdmin": {
+    "ConnectionString": "Server=TIS;Database=SU25_PRN232_Garage;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  }
 }
