--- a/RestX.Services/RestX.BLL.csproj
+++ b/RestX.Services/RestX.BLL.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="16.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RestX.DAL\RestX.DAL.csproj" />
     <ProjectReference Include="..\RestX.Models\RestX.Models.csproj" />
   </ItemGroup>
