#RX-29: Add hangfire, Update Entity

--- a/RestX.Admin/appsettings.json
+++ b/RestX.Admin/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "RestXAdmin": {
-    "ConnectionString": "Server=TIS;Database=SU25_PRN232_Garage;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  "ConnectionStrings": {
+    "ConnectionString": "Server=.;Database=restx_admin;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+  "AppSettings": {
+
   }
 }
