--- a/RestX.WebApp/appsettings.json
+++ b/RestX.WebApp/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=tprofile-notenant;User=sa;Password=123;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "DefaultConnection": "Server=localhost,1433;Database=demo_tenant;User=sa;Password=123;MultipleActiveResultSets=true;TrustServerCertificate=True",
     "AdminDbContext": "Server=localhost,1433;Database=restx_admin;User ID=sa;Password=123;MultipleActiveResultSets=True;TrustServerCertificate=True",
     "RedisConnection": "localhost:6379"
   }
